--- a/css/style.css
+++ b/css/style.css
@@ -26,5 +26,107 @@ body {
     width: 100%;
     height: 100vh;
     margin: 0;
+    background-image: radial-gradient(circle, #1c7fc2 0%, #009cdc 28%, #0d9ade 32%, #011844 100%);
+    color: #fff;
+    font-family: 'Open Sans', Arial, sans-serif;
+    font-weight: 300;
+    font-size: 22px;
 }
 
+.weather {
+    width: 80%;
+    height: 100%;
+    margin: 0 auto;
+    padding: 20px 0;
+    box-sizing: border-box;
+    white-space: nowrap; /* So text would be on 1 line */
+}
+
+.weather__search {
+    width: 100%;
+    padding: 15px 10px;
+    border:none;
+    background-color: rgba(255,255,255,0.2);
+    font-size: 20px;
+    color: inherit;
+    margin-bottom: 20px;
+    border-radius: 20px;
+}
+
+.weather__search::placeholder {
+    color: #fff;
+}
+
+.weather__today {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.weather__image {
+    width: 30vmin;
+    align-self: center;
+}
+
+.weather__city {
+    font-size: 36px;
+    font-weight: 600;
+    margin: 20px 0;
+}
+
+.weather__day {
+    font: 30px;
+    margin: 10px 0;
+    font-weight: 400;
+}
+
+/* TO ADD ICONS IN FRONT OF WEATHER INDICATORS */
+.weather__indicator::before {
+    content: '';
+    display: inline-block;
+    vertical-align: middle;
+    width: 30px;
+    height: 30px;
+    background-size: cover;
+    margin-right: 10px;
+}
+.weather__indicator--humidity::before {
+    background-image: url(../images/humidity.png);
+}
+.weather__indicator--wind::before {
+    background-image: url(../images/wind.png);
+}
+.weather__indicator--pressure::before {
+    background-image: url(../images/pressure.png);
+}
+
+.weather__temperature {
+    font-size: 60px;
+}
+
+.weather__temperature__feels-like {
+    font-size: 20px;
+    margin-bottom: 20px;    
+}
+
+.weather__forecast {
+    width: 100%;
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap; /* Basically makes the boxes responsive */
+    justify-content: space-between;
+}
+.weather__forecast__icon { /* 50% out of parent element (article) */ 
+    width: 50%;
+}
+
+.weather_forecast__item {
+    background-color: rgba(255,255,255,0.2);
+    border-radius: 10px;
+    margin: 0 10px 10px;
+    padding: 20px 5px 20px;
+    box-sizing: border-box;
+    min-width: 150px;
+    width: calc(20% - 20px);
+    flex-grow: 1;
+}
